# ruch

./: .gitignore  Cargo.toml  Design.md  README.md
.github/workflows/: ci.yml  rust.yml
client/: Cargo.toml
client/src/: main.rs
client/tests/: integration_1.rs
server/: Cargo.toml
server/src/: main.rs
server/src/cache/: mod.rs
server/src/cache/cmds/: cmd.rs
server/src/cache/db/: mod.rs  rdb.rs
server/src/cache/db/tests/: mod.rs  rdict.rs
server/src/cache/types/: mod.rs  rhash.rs  rlist.rs  rstring.rs
server/tests/: integration_1.rs
