[package]
name = "server"
version = "0.1.0"
authors = ["peterhp <sora_lsh@163.com>","Jonir Rings <peterpuyi@live.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]

[dev-dependencies.cargo-husky]
version = "1.4.0"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy"]
